--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 body {
   color: white;
-  background-color: grey;
+  background-color: black;
   font-family: "IBM Plex Mono", monospace;
 }
 
@@ -16,11 +16,16 @@ li {
 
 nav > ul {
   display: flex;
+  justify-content: flex-end;
   gap: 1rem;
+}
+
+nav ul li:first-child {
+  margin-right: auto;
 }
 
 @media (min-width: 400px) {
   body {
-    margin: 0 25rem;
+    margin: 2rem 25rem;
   }
 }
