--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -1,11 +1,14 @@
-.work {
-  display: flex;
-}
+@media (min-width: 450px) {
+  .work {
+    display: flex;
+    margin: 0.5em 0;
+  }
 
-.date {
-  flex: 1;
-}
+  .date {
+    flex: 1;
+  }
 
-.details {
-  flex: 1;
+  .details {
+    flex: 1;
+  }
 }
