New blog post, rotating eyes

--- a/components/Eyes/Eyes.css
+++ b/components/Eyes/Eyes.css
@@ -25,3 +25,16 @@ body {
   border-radius: 101px;
   background-color: #000;
 }
+
+@keyframes rotate-pupil {
+  0% {
+    transform: rotate(0deg) translateX(20px) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(20px) rotate(-360deg);
+  }
+}
+
+.pupil-animate {
+  animation: rotate-pupil 2s infinite linear;
+}
