About page updated

--- a/components/UI/JobBox.module.css
+++ b/components/UI/JobBox.module.css
@@ -1,7 +1,11 @@
+.work {
+  margin-top: 1.5em;
+}
+
 @media (min-width: 450px) {
   .work {
     display: flex;
-    margin: 0.5em 0;
+    margin: 1em 0;
   }
 
   .date {
